--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                     >
                         <!-- Whole Card is a link -->
                         <a
-                            href="//service-Cabinet-Painting"
+                            href="service-Cabinet-Painting"
                             style="transform-style: preserve-3d"
                             class="text-center relative block overflow-hidden transition duration-500  rotate-y-180 sm:rotate-y-0 sm:group-hover:rotate-y-180 aspect-w-16 aspect-h-9 sm:aspect-w-1 sm:aspect-h-1 rounded-2xl focus:ring-2 focus:outline-none ring-primary ring-offset-2"
                             aria-label="Cabinet Painting"
@@ -1390,7 +1390,7 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                     >
                         <!-- Whole Card is a link -->
                         <a
-                            href="//service-Stair-Railing-Painting"
+                            href="service-Stair-Railing-Painting"
                             style="transform-style: preserve-3d"
                             class="text-center relative block overflow-hidden transition duration-500  rotate-y-180 sm:rotate-y-0 sm:group-hover:rotate-y-180 aspect-w-16 aspect-h-9 sm:aspect-w-1 sm:aspect-h-1 rounded-2xl focus:ring-2 focus:outline-none ring-primary ring-offset-2"
                             aria-label="Stair Railing Painting"
@@ -1445,7 +1445,7 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                     >
                         <!-- Whole Card is a link -->
                         <a
-                            href="//service-Deck-Restoration"
+                            href="service-Deck-Restoration"
                             style="transform-style: preserve-3d"
                             class="text-center relative block overflow-hidden transition duration-500  rotate-y-180 sm:rotate-y-0 sm:group-hover:rotate-y-180 aspect-w-16 aspect-h-9 sm:aspect-w-1 sm:aspect-h-1 rounded-2xl focus:ring-2 focus:outline-none ring-primary ring-offset-2"
                             aria-label="Deck Restoration"
@@ -1500,7 +1500,7 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                     >
                         <!-- Whole Card is a link -->
                         <a
-                            href="//service-Interior-Painting"
+                            href="service-Interior-Painting"
                             style="transform-style: preserve-3d"
                             class="text-center relative block overflow-hidden transition duration-500  rotate-y-180 sm:rotate-y-0 sm:group-hover:rotate-y-180 aspect-w-16 aspect-h-9 sm:aspect-w-1 sm:aspect-h-1 rounded-2xl focus:ring-2 focus:outline-none ring-primary ring-offset-2"
                             aria-label="Interior Painting"
@@ -1555,7 +1555,7 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                     >
                         <!-- Whole Card is a link -->
                         <a
-                            href="//service-Exterior-Painting"
+                            href="service-Exterior-Painting"
                             style="transform-style: preserve-3d"
                             class="text-center relative block overflow-hidden transition duration-500  rotate-y-180 sm:rotate-y-0 sm:group-hover:rotate-y-180 aspect-w-16 aspect-h-9 sm:aspect-w-1 sm:aspect-h-1 rounded-2xl focus:ring-2 focus:outline-none ring-primary ring-offset-2"
                             aria-label="Exterior Painting"
@@ -1610,7 +1610,7 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                     >
                         <!-- Whole Card is a link -->
                         <a
-                            href="//service-Drywall-and-Plastering"
+                            href="service-Drywall-and-Plastering"
                             style="transform-style: preserve-3d"
                             class="text-center relative block overflow-hidden transition duration-500  rotate-y-180 sm:rotate-y-0 sm:group-hover:rotate-y-180 aspect-w-16 aspect-h-9 sm:aspect-w-1 sm:aspect-h-1 rounded-2xl focus:ring-2 focus:outline-none ring-primary ring-offset-2"
                             aria-label="Drywall and Plastering"
@@ -1665,7 +1665,7 @@ Our Guarantee: Expert quality every time. We don&#x27;t consider a job done unti
                     >
                         <!-- Whole Card is a link -->
                         <a
-                            href="//service-Staining"
+                            href="service-Staining"
                             style="transform-style: preserve-3d"
                             class="text-center relative block overflow-hidden transition duration-500  rotate-y-180 sm:rotate-y-0 sm:group-hover:rotate-y-180 aspect-w-16 aspect-h-9 sm:aspect-w-1 sm:aspect-h-1 rounded-2xl focus:ring-2 focus:outline-none ring-primary ring-offset-2"
                             aria-label="Staining"
